# hetero-trigger

./: .gitignore  Makefile  Makefile.am  configure.ac  ht_flag.c  ht_flag.h  ht_op.cu  ht_op.h  main.c
include/: ht_cuda.h  ht_flag.h  ht_op.h  ht_queue.h  htconf.h.in
maint/: version.m4
src/: Makefile.mk  ht_flag.c  ht_op.cu  ht_op.h  ht_op.hip  ht_queue.c  main.c  utlist.h
test/: Makefile.mk  queued_op.c  set_perf.c
